Footer component and email forms added

--- a/src/app/layout/components/footer-components/Footer.css
+++ b/src/app/layout/components/footer-components/Footer.css
@@ -1,17 +1,86 @@
-.container {
+.container-main {
+	/*border: 5px red solid;*/
 	display: flex;
-	background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+	background: black;
+}
+
+/*Anschrift+Kontakt-Container*/
+.container-1 {
+	/* border: 5px #ccc solid;*/
+	padding: 5px 20px;
+	width: 60%;
+	font-style: 'Poppins', sans-serif;
+	color: var(--secondary-color);
+	display: flex;
 	justify-content: space-between;
-	margin: auto;
+	gap: 20px;
+	z-index: 1000;
+}
+
+/*Copyright-Container*/
+.container-2 {
 	width: 100%;
-	padding: 20px 50px;
+	font-style: 'Poppins', sans-serif;
+	color: var(--secondary-color);
+	margin: auto;
 }
 
-.list {
-	list-style-type: none; /* Remove bullets */
+/*Logos Container*/
+.container-3 {
+	/*border: 5px yellow solid;*/
+	padding: 5px 20px;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	width: 40%;
+	gap: 10px;
+	z-index: 1000;
 }
 
-.row {
-	background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+/*Kontakt*/
+.box-1 {
+	/*background: dimgray;*/
+	list-style-type: none;
+	font-size: 13px;
+}
+
+/*Anschrift*/
+.box-2 {
+	/* background: darkslateblue;*/
+	list-style-type: none;
+	font-size: 13px;
+}
+
+/*Copyright zeug ganz unten*/
+.box-3 {
+	border-top: 1px solid grey;
+	background: black;
+	font-size: 11px;
+	list-style-type: none;
 	text-align: center;
+	padding: 3px;
 }
+
+/*Logos*/
+/*.box-4 {
+    /*background: black;}*/
+
+a {
+	color: var(--secondary-color);
+}
+
+@media screen and (max-width: 991px) {
+	.container-1 {
+		flex-direction: column;
+		width: 50%;
+	}
+	.container-3 {
+		width: 50%;
+		margin: auto;
+	}
+}
+
+@media screen and (max-width: 414px) {
+}
+/*Bilder kleiner machen wenn Fenster kleiner geht
+Schrift kleiner machen wenn Fenster kleiner geht */
