--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -11,6 +11,7 @@
 	--primary-color: #080808;
 	--secondary-color: #fc4444;
 	--accent-color: #c7eeff;
+	--hover-color: #292929;
 	--logo-bg-color: #a2bfbd;
 	--bg-color: #453b36;
 	--text-color: #fc4444;
