Enrolment and contact screens editted

--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -10,9 +10,8 @@
 :root {
 	--primary-color: #080808;
 	--secondary-color: #fc4444;
-	--accent-color: #c7eeff;
+	--accent-color: #ffffff;
 	--hover-color: #292929;
-	--logo-bg-color: #a2bfbd;
 	--bg-color: #453b36;
 	--text-color: #fc4444;
 }
