--- a/src/app/layout/screens/Teamscreen.css
+++ b/src/app/layout/screens/Teamscreen.css
@@ -1,5 +1,6 @@
 .Container-title {
     font-family: 'Fjalla One', sans-serif;
+    text-decoration-line: underline;
     color: white;
     font-size: 3rem;
     border: 2px solid red;
@@ -11,22 +12,55 @@
     border: 2px solid blue;
     width: 100%;
     color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
 }
 
 .Container-info {
-    border: 2px solid yellow;
+    border: 5px solid yellow;
     width: 50%;
+    text-align: justify;
     color: white;
 }
 
 .Container-info-title {
-    border: 2px solid green;
+    border: 2px solid purple;
     width: 100%;
     color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    background-image: linear-gradient(
+        to top,
+        #ff723b 0%,
+        var(--secondary-color) 84%
+    );
+    border-radius: 10px 10px 0 0;
+    padding: 10px 0;
+    position: relative;
+    height: auto;
+    top: 8px;
+    z-index: -1;
+}
+
+.Container-Bild-Ajdin {
+    border: 2px solid cyan;
+    width: 50%;
+    padding-left: 8%;
 }
 
 .videoTag {
     width: 100%;
     height: 45vh;
     object-fit: cover;
+}
+
+.Container-info-text {
+    border: 2px solid green;
+    background-color: var(--accent-color);
+    z-index: 1000;
+    border-radius: 10px;
+    height: 89%;
+    color: black;
+    padding: 2% 3%;
 }
