--- a/src/app/layout/screens/DatenschutzScreen/Datenschutz.css
+++ b/src/app/layout/screens/DatenschutzScreen/Datenschutz.css
@@ -25,3 +25,12 @@
     padding-bottom: 3%;
     padding-top: 5%;
 }
+
+@media screen and (max-width: 991px) {
+    .title {
+        font-size: 2.8rem;
+    }
+    .datenschutzText {
+        text-align: left;
+    }
+}
