--- a/src/app/layout/screens/ImperessumScreen/Imperessum.css
+++ b/src/app/layout/screens/ImperessumScreen/Imperessum.css
@@ -11,7 +11,7 @@
 }
 
 .Container-main {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     width: 100%;
     color: white;
     display: flex;
@@ -19,7 +19,7 @@
     gap: 5%;
 }
 .Container-info2 {
-    border: 5px solid yellow;
+    /* border: 5px solid yellow; */
     padding-bottom: 3cm;
     width: 60%;
     height: 100%;
@@ -30,7 +30,7 @@
 }
 
 .Container-info {
-    border: 5px solid yellow;
+    /* border: 5px solid yellow; */
     padding-bottom: 3cm;
     width: 40%;
     height: 100%;
