--- a/src/app/layout/screens/TeamScreen/Teamscreen.css
+++ b/src/app/layout/screens/TeamScreen/Teamscreen.css
@@ -16,22 +16,14 @@
     color: white;
     display: flex;
     flex-direction: row;
-    gap: 5%;
-}
-.Container-main2 {
-    /* border: 2px solid green; */
-    width: 100%;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    gap: 5%;
-    padding-bottom: 2cm;
+    margin: 20px 0;
+    align-items: center;
 }
 
 .Container-info {
     /* border: 5px solid yellow; */
     padding-bottom: 3cm;
-    width: 60%;
+    flex-basis: 70%;
     height: 100%;
     text-align: justify;
     color: white;
@@ -58,9 +50,9 @@
 
 .Container-Bild {
     border: 3px solid var(--secondary-color);
-    width: 40%;
+    flex-basis: 30%;
     height: 100%;
-    margin: auto;
+
     display: flex;
     border-radius: 20px;
     overflow: hidden;
