Print screen link action fixed

--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -11,7 +11,7 @@
 :root {
 	--primary-color: #080808;
 	--secondary-color: #df5a5a;
-	--accent-color: #ccc;
+	--accent-color: #eaeaea;
 	--hover-color: #292929;
 	--text-color: #fc4444;
 }
