--- a/src/app/layout/screens/TeamScreen/Teamscreen.css
+++ b/src/app/layout/screens/TeamScreen/Teamscreen.css
@@ -1,112 +1,196 @@
 .team-container-title {
-	font-family: 'Fjalla One', sans-serif;
-	text-decoration-line: underline;
-	color: white;
-	font-size: 3.5rem;
-	width: 100%;
-	height: 100%;
+    font-family: 'Fjalla One', sans-serif;
+    text-decoration-line: underline;
+    color: white;
+    font-size: 3.5rem;
+    width: 100%;
+    height: 100%;
 }
 
 .Container-main {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	margin-bottom: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
 }
 
 .Container-team-info {
-	min-width: 100%;
-	text-align: justify;
-	color: white;
-	margin: 20px 0;
+    min-width: 100%;
+    text-align: justify;
+    color: white;
+    margin: 20px 0;
 }
 
 .container-personal-info {
-	flex-basis: 70%;
-	color: #000;
+    flex-basis: 70%;
+    color: #000;
 }
 
 .Container-info-title {
-	border: 3px solid var(--secondary-color);
-	width: 100%;
-	color: white;
-	text-align: center;
-	font-size: 1.5rem;
-	background-image: linear-gradient(
-		to top,
-		#ff723b 0%,
-		var(--secondary-color) 84%
-	);
-	border-radius: 10px 10px 0 0;
-	padding: 10px 0;
-	position: relative;
-	top: 8px;
-	z-index: -1;
+    border: 3px solid var(--secondary-color);
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    background-image: linear-gradient(
+        to top,
+        #ff723b 0%,
+        var(--secondary-color) 84%
+    );
+    border-radius: 10px 10px 0 0;
+    padding: 10px 0;
+    position: relative;
+    top: 8px;
+    z-index: -1;
 }
 
 .Container-Bild {
-	border: 3px solid var(--secondary-color);
-	width: 300px;
-	margin: auto 0;
-	border-radius: 20px;
-	overflow: hidden;
-	display: grid;
-	place-items: center;
-	flex-basis: 30%;
+    border: 3px solid var(--secondary-color);
+    width: 300px;
+    margin: auto 0;
+    border-radius: 20px;
+    overflow: hidden;
+    display: grid;
+    place-items: center;
+    flex-basis: 30%;
 }
 
 .videoTag {
-	width: 100%;
-	height: 45vh;
-	object-fit: cover;
+    width: 100%;
+    height: 45vh;
+    object-fit: cover;
 }
 
 .Container-info-text {
-	border: 3px solid var(--secondary-color);
-	background-color: var(--accent-color);
-	z-index: 10;
-	border-radius: 10px;
-	height: 100%;
-	color: black;
-	padding: 2% 5%;
+    border: 3px solid var(--secondary-color);
+    background-color: var(--accent-color);
+    z-index: 10;
+    border-radius: 10px;
+    height: 100%;
+    color: black;
+    padding: 2% 5%;
 }
 
 .Container-info-text p {
-	margin: 12px 0;
+    margin: 12px 0;
 }
 
 .Container-info-text b {
-	margin-right: 6px;
+    margin-right: 6px;
 }
 
 .Container-info-text ul {
-	padding-left: 4%;
+    list-style-image: url('../images/Tennis-icon.png');
+}
+.Container-info-text li {
+    font-size: 1.3rem;
+    padding-bottom: 2%;
+
+    font-family: 'Fjalla One', sans-serif;
+}
+
+.ListContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8%;
+}
+
+.ListProfilTitle {
+    padding-left: 2.5%;
+
+    width: 22%;
+}
+.ListProfilText {
+    font-size: 1.1rem;
+    text-align: left;
+    width: 70%;
 }
 
 .Info-text-title {
-	text-align: center;
-	padding-bottom: 2%;
+    text-align: center;
+    padding-bottom: 2%;
+    font-size: 1.5rem;
+}
+
+.ListProfilTextBottom {
+    width: 100%;
+    text-align: center;
 }
 
 @media screen and (max-width: 991px) {
-	.team-container-title {
-		font-size: 2rem;
-	}
+    .team-container-title {
+        font-size: 2rem;
+    }
 
-	.Container-main {
-		flex-direction: column;
-		height: unset;
-	}
+    .Container-main {
+        flex-direction: column;
+        height: unset;
+    }
 
-	.Container-team-info {
-		width: 100%;
-	}
-	.Container-Bild {
-		width: 100%;
-		margin-bottom: 20px;
-	}
+    .Container-team-info {
+        width: 100%;
+    }
+    .Container-Bild {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 
-	.Container-info-text {
-		text-align: left;
-	}
+    .Container-info-text {
+        text-align: left;
+    }
+}
+
+@media screen and (max-width: 1488px) {
+    .ListProfilText {
+        font-size: 0.9rem;
+    }
+    .Container-info-text li {
+        font-size: 1rem;
+    }
+    .ListProfilTextBottom {
+        font-size: 0.9rem;
+    }
+}
+@media screen and (max-width: 680px) {
+    .ListProfilText {
+        font-size: 0.8rem;
+    }
+    .Container-info-text li {
+        font-size: 0.95rem;
+    }
+    .ListProfilTextBottom {
+        font-size: 0.8rem;
+    }
+    .ListProfilTitle {
+        width: 30%;
+    }
+}
+@media screen and (max-width: 470px) {
+    .ListProfilText {
+        font-size: 0.7rem;
+    }
+    .Container-info-text li {
+        font-size: 0.85rem;
+    }
+    .ListProfilTextBottom {
+        font-size: 0.7rem;
+    }
+    .Info-text-title {
+        font-size: 1.1rem;
+    }
+}
+@media screen and (max-width: 430px) {
+    .ListProfilText {
+        font-size: 0.67rem;
+    }
+    .Container-info-text li {
+        font-size: 0.8rem;
+    }
+    .ListProfilTextBottom {
+        font-size: 0.67rem;
+    }
+    .ListProfilTitle {
+        width: 35%;
+    }
 }
