--- a/src/app/layout/screens/TeamScreen/Teamscreen.css
+++ b/src/app/layout/screens/TeamScreen/Teamscreen.css
@@ -116,6 +116,7 @@
 .ListProfilTextBottom {
     width: 100%;
     text-align: center;
+    padding-top: 20px;
 }
 
 @media screen and (max-width: 991px) {
